[package]
name = "near-cli"
version = "0.1.13"
authors = ["FroVolod <frol_off@meta.ua>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
dialoguer = "0.7"
# strum = "0.20"
strum = { git = "https://github.com/frol/strum", branch = "feat/discriminants-pass-through-attributes", features = ["derive"] }
strum_macros = "0.20"
smart-default = "0.6.0"
derive_more = "0.99.9"

async-recursion = "0.3.2"

actix = "0.11.0-beta.2"
actix-web = { version = "4.0.0-beta.6", features = [ "openssl" ] }
openssl-probe = { version = "0.1.2" }

base64 = "0.12.3"
bip39 = { version = "1.0.0", features = [ "rand" ] }
bs58 = "0.3"
ed25519-dalek = { version = "1" }
hex = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
dirs = "3.0"
slip10 = "0.4.3"
url = { version = "2", features = ["serde"] }
url_open = "0.0.1"
shell-words = "1.0.0"

color-eyre = "0.5"

near-ledger = "0.1.1"

near-crypto = { git = "https://github.com/near/nearcore", rev="e242f71400111fe99a825fd8f5e53a82802c98b7" }
near-primitives = { git = "https://github.com/near/nearcore", rev="e242f71400111fe99a825fd8f5e53a82802c98b7" }
near-jsonrpc-client = { git = "https://github.com/near/nearcore", rev="e242f71400111fe99a825fd8f5e53a82802c98b7" }
near-jsonrpc-primitives = { git = "https://github.com/near/nearcore", rev="e242f71400111fe99a825fd8f5e53a82802c98b7" }

# interactive_clap = { git = "https://github.com/FroVolod/interactive-clap", rev="8c544f9fa8b146f4695a3a7e1a4a44a06a8d8196" }
# interactive_clap_derive = { git = "https://github.com/FroVolod/interactive-clap-derive", rev="08cd42d8738ef512920c3a23b85a06d2b04d5b5e" }
interactive_clap = { path = "/Users/frovolod/Documents2/Rust/hello-macro/macro-proba/interactive_clap" }
interactive_clap_derive = { path = "/Users/frovolod/Documents2/Rust/hello-macro/macro-proba/interactive_clap/interactive_clap_derive" }
